// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row renders correctly with default props 1`] = `
<DocumentFragment>
  .css-1dozwql-StyledRow {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
}

<div
    class="css-1dozwql-StyledRow e1fm7frr0"
  >
    <div>
      First col
    </div>
    <div>
      Second col
    </div>
  </div>
</DocumentFragment>
`;

exports[`Row renders correctly with specific align 1`] = `
<DocumentFragment>
  .css-166r2lt-StyledRow {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="css-166r2lt-StyledRow e1fm7frr0"
  >
    <div>
      First col
    </div>
    <div>
      Second col
    </div>
  </div>
</DocumentFragment>
`;

exports[`Row renders correctly with specific gap 1`] = `
<DocumentFragment>
  .css-1nb3qk1-StyledRow {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 8px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
}

<div
    class="css-1nb3qk1-StyledRow e1fm7frr0"
  >
    <div>
      First col
    </div>
    <div>
      Second col
    </div>
  </div>
</DocumentFragment>
`;
